--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,9 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=LoginAndSignUp
+application.desc=proyecto de poo\ncreador por FERNANDEZ ROJAS SHANDE
+application.splash=/home/shande/Descargas/pngegg.png
+application.title=Login
 application.vendor=shande
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,22 +31,22 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/LoginAndSignUp.jar
+dist.jar=${dist.dir}/Login.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/LoginAndSignUp
+dist.jlink.output=${dist.jlink.dir}/Login
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-8.0.30.jar=/home/shande/Descargas/jar_files/mysql-connector-java-8.0.30.jar
 file.reference.protobuf-java-3.19.4.jar=/home/shande/Descargas/jar_files/protobuf-java-3.19.4.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.30.jar}:\
     ${file.reference.protobuf-java-3.19.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
-javac.deprecation=false
+javac.deprecation=true
 javac.external.vm=true
 javac.modulepath=
 javac.processormodulepath=
@@ -76,8 +78,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=LoginAndSignUp
-main.class=loginandsignup.Main
+jlink.launcher.name=Login
+main.class=login.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
